manifests-successful/0.29.0-manifest.yaml
---
# Source: mariadb-operator/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-mariadb-operator-webhook
  labels:
    
    helm.sh/chart: mariadb-operator-0.29.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: my-release
    
    app.kubernetes.io/version: "v0.0.29"
    
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: my-release
---
# Source: mariadb-operator/templates/cert-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-mariadb-operator-cert-controller
  labels:
    
    helm.sh/chart: mariadb-operator-0.29.0
    app.kubernetes.io/name: mariadb-operator-cert-controller
    app.kubernetes.io/instance: my-release
    
    app.kubernetes.io/version: "v0.0.29"
    
    app.kubernetes.io/managed-by: Helm
spec:
  
  selector:
    matchLabels:
      
      app.kubernetes.io/name: mariadb-operator-cert-controller
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      
      labels:
        
        app.kubernetes.io/name: mariadb-operator-cert-controller
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-mariadb-operator-cert-controller-cert-controller
      automountServiceAccountToken: true
      
      
      
      
      containers:
        - image: "docker-registry3.mariadb.com/mariadb-operator/mariadb-operator:v0.0.29"
          imagePullPolicy: IfNotPresent
          name: cert-controller
          args:
            - cert-controller
            - --ca-secret-name=my-release-mariadb-operator-webhook-ca
            - --ca-secret-namespace=0.29.0
            - --ca-validity=35064h
            - --cert-secret-name=my-release-mariadb-operator-webhook-cert
            - --cert-secret-namespace=0.29.0
            - --cert-validity=8766h
            - --lookahead-validity=2160h
            - --service-name=my-release-mariadb-operator-webhook
            - --service-namespace=0.29.0
            - --requeue-duration=5m
            - --metrics-addr=:8080
            - --health-addr=:8081
            - --log-level=INFO
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
            - containerPort: 8081
              protocol: TCP
              name: health
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 5
---
# Source: mariadb-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-mariadb-operator
  labels:
    
    helm.sh/chart: mariadb-operator-0.29.0
    app.kubernetes.io/name: mariadb-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.0.29"
    app.kubernetes.io/managed-by: Helm
spec:
  
  selector:
    matchLabels:
      
      app.kubernetes.io/name: mariadb-operator
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      
      labels:
        
        app.kubernetes.io/name: mariadb-operator
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-mariadb-operator
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 10
      
      
      
      
      containers:
        - image: "docker-registry3.mariadb.com/mariadb-operator/mariadb-operator:v0.0.29"
          imagePullPolicy: IfNotPresent
          name: controller
          args:
            - --metrics-addr=:8080
            - --log-level=INFO
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
---
# Source: mariadb-operator/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-mariadb-operator-webhook
  labels:
    
    helm.sh/chart: mariadb-operator-0.29.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: my-release
    
    app.kubernetes.io/version: "v0.0.29"
    
    app.kubernetes.io/managed-by: Helm
spec:
  
  selector:
    matchLabels:
      
      app.kubernetes.io/name: mariadb-operator-webhook
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      
      labels:
        
        app.kubernetes.io/name: mariadb-operator-webhook
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-mariadb-operator-webhook
      automountServiceAccountToken: true
      
      
      
      
      hostNetwork: false
      containers:
        - image: "docker-registry3.mariadb.com/mariadb-operator/mariadb-operator:v0.0.29"
          imagePullPolicy: IfNotPresent
          name: webhook
          args:
            - webhook
            - --ca-cert-path=/tmp/k8s-webhook-server/certificate-authority/tls.crt
            - --cert-dir=/tmp/k8s-webhook-server/serving-certs
            - --dns-name=my-release-mariadb-operator-webhook.0.29.0.svc
            - --port=9443
            - --metrics-addr=:8080
            - --health-addr=:8081
            - --log-level=INFO
          ports:
            - containerPort: 9443
              protocol: TCP
              name: https
            - containerPort: 8080
              protocol: TCP
              name: metrics
            - containerPort: 8081
              protocol: TCP
              name: health
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/certificate-authority
              name: ca
              readOnly: true
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 5
          
          
      volumes:
        - name: ca
          secret:
            defaultMode: 420
            secretName: my-release-mariadb-operator-webhook-ca
        - name: cert
          secret:
            defaultMode: 420
            secretName: my-release-mariadb-operator-webhook-cert
---
# Source: mariadb-operator/templates/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-mariadb-operator-webhook
  labels:
    
    helm.sh/chart: mariadb-operator-0.29.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: my-release
    
    app.kubernetes.io/version: "v0.0.29"
    
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.mariadb.com/webhook: ""
    
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: my-release-mariadb-operator-webhook
      namespace: 0.29.0
      path: /mutate-k8s-mariadb-com-v1alpha1-mariadb
  failurePolicy: Fail
  name: mmariadb.kb.io
  rules:
  - apiGroups:
    - k8s.mariadb.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - mariadbs
  sideEffects: None
---
# Source: mariadb-operator/templates/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-release-mariadb-operator-webhook
  labels:
    
    helm.sh/chart: mariadb-operator-0.29.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: my-release
    
    app.kubernetes.io/version: "v0.0.29"
    
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.mariadb.com/webhook: ""
    
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-backup
    failurePolicy: Fail
    name: vbackup.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backups
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-connection
    failurePolicy: Fail
    name: vconnection.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - connections
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-database
    failurePolicy: Fail
    name: vdatabase.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - databases
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-grant
    failurePolicy: Fail
    name: vgrant.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - grants
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-mariadb
    failurePolicy: Fail
    name: vmariadb.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - mariadbs
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-maxscale
    failurePolicy: Fail
    name: vmaxscale.kb.io
    rules:
    - apiGroups:
      - k8s.mariadb.com
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - maxscales
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-restore
    failurePolicy: Fail
    name: vrestore.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - restores
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-sqljob
    failurePolicy: Fail
    name: vsqljob.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sqljobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-mariadb-operator-webhook
        namespace: 0.29.0
        path: /validate-k8s-mariadb-com-v1alpha1-user
    failurePolicy: Fail
    name: vuser.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - users
    sideEffects: None
